logs/Slang/generated/keywords/5.6.2--keyword_int.sv.log
name: int
description: The 'int' keyword should be reserved
should_fail: 1
tags: 5.6.2
files: /home/travis/build/SymbiFlow/sv-tests/tests/generated/keywords/5.6.2--keyword_int.sv
incdirs: 
top_module: 
rc: 1

../../home/travis/build/SymbiFlow/sv-tests/tests/generated/keywords/5.6.2--keyword_int.sv:8:8: error: expected declarator
    bit int;
       ^
../../home/travis/build/SymbiFlow/sv-tests/tests/generated/keywords/5.6.2--keyword_int.sv:8:12: error: expected declarator
    bit int;
           ^
